<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#fff"
    tools:context="com.example.joser.trident.Reglas">


    <ScrollView
        style="@android:style/Widget.DeviceDefault.Light.ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.80"
                android:paddingBottom="20dp"
                android:singleLine="true"
                android:text="@string/reglas_titulo"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/negro"
                android:textSize="30sp" />


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.64"
                android:maxLines="10"
                android:paddingBottom="10dp"
                android:scrollbars="vertical"
                android:text="@string/reglas_primer_parrafo"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#000000"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.64"
                android:paddingBottom="10dp"
                android:text="@string/reglas_triki"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imgDbTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img19" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.64"
                android:paddingBottom="10dp"
                android:text="@string/reglas_explicacion1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imgDbBlanco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img1" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.64"
                android:paddingBottom="10dp"
                android:text="@string/reglas_explicacion2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imgUno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img2" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.64"
                android:paddingBottom="10dp"
                android:text="@string/reglas_explicacion3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imgDos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img3" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.64"
                android:maxLines="15"
                android:paddingBottom="10dp"
                android:scrollbars="vertical"
                android:text="@string/reglas_explicacion4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imgTres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img4" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.64"
                android:maxLines="10"
                android:paddingBottom="10dp"
                android:scrollbars="vertical"
                android:text="@string/reglas_explicacion5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imgCuatro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img5" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.64"
                android:paddingBottom="10dp"
                android:scrollbars="vertical"
                android:text="@string/reglas_explicacion6"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imgCinco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img6" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.64"
                android:scrollbars="vertical"
                android:text="@string/reglas_explicacion7"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imgSeis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/img7" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
